Fix edit icon blurriness

--- a/src/static/scss/utilities/_utilities.shame.scss
+++ b/src/static/scss/utilities/_utilities.shame.scss
@@ -66,7 +66,7 @@ body {
         background-color: color('brand-secondary');
         border-radius: 50%;
         color: #fff;
-        font-size: 18px;
+        font-size: 20px;
         height: 1em;
         transform-origin: 0 100%;
         width: 1em;
@@ -75,17 +75,18 @@ body {
         left: 0;
         z-index: 10;
 
-        .icon {
-            transform: translate(-50%, -50%);
-            position: absolute;
-            top: 50%;
-            left: 50%;
-        }
-
         &:hover {
             background-color: darken(color('brand-secondary'), 4%);
             color: #fff;
             text-decoration: none;
-            transform: scale(1.1);
         }
+    }
+
+    .c-widget__icon {
+        fill: currentColor;
+        font-size: 12px;
+        transform: translate(-50%, -50%);
+        position: absolute;
+        top: 50%;
+        left: 50%;
     }
